--- a/login/src/App.css
+++ b/login/src/App.css
@@ -31,36 +31,13 @@
     width: 50vw;
     max-width: 700px;
 }
+
+.profile-picture:hover {
+  cursor: pointer;
+}
+
 @media (min-width: 1200px) {
   .container {
     width: 700px;
   }
 }
-
-/*.popup .create-post {
-  margin-top: 30vh;
-  position: fixed;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
-}
-
-.popup .create-post form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-}
-
-.popup .create-post input {
-  width: 100%;
-}
-
-.popup .create-post h3,
-.popup .create-post form,
-.popup .create-post form input {
-  background: var(--header-color);
-}
-*/
