--- a/login/src/App.css
+++ b/login/src/App.css
@@ -1,4 +1,3 @@
-/*@import "https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/darkly/bootstrap.min.css";*/
 @import "https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/cosmo/bootstrap.min.css";
 @import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css";
 @import "https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css";
@@ -9,7 +8,7 @@
 }
 
 .nav-link {
-    color: #fff;
+  color: #fff;
 }
 
 .popup {
@@ -28,8 +27,8 @@
 }
 
 .card {
-    width: 50vw;
-    max-width: 700px;
+  width: 50vw;
+  max-width: 700px;
 }
 
 .toast {
@@ -41,12 +40,35 @@
 }
 
 .vertical-line-header {
-  border: 1px solid #fff; 
+  border: 1px solid #fff;
 }
 
 .user-picture {
   height: 40px;
   width: 40px;
+}
+
+.navbar-dark .navbar-nav .nav-link {
+  color: #fff;
+}
+
+.navbar-dark .navbar-toggler {
+  border: none;
+}
+
+nav {
+  display: fixed;
+}
+
+#root {
+  padding-top: 60px;
+  padding-bottom: 10px;
+}
+
+@media (max-width: 767.98px) {
+  .card {
+    width: 90vw;
+  }
 }
 
 @media (min-width: 1200px) {
